# trusted-function-framework

./: .clang-dirs  .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md  SECURITY.md  THIRD-PARTY-NOTICES  build.sh  dockerbuild.sh
cmake/: FindSGX.cmake
deployment/: .gitignore  create_image.sh  run_image.sh
deployment/certs/: ca.crt  test1.crt  test1.key  test2.crt  test2.key
deployment/conf/: kubetee.json
deployment/dockerfile/: Dockerfile
enclave_samples/: CMakeLists.txt
enclave_samples/protobuf_functions/: CMakeLists.txt
enclave_samples/protobuf_functions/app/: app.cpp  app.h
enclave_samples/protobuf_functions/enclave/: enclave.config.xml  enclave.cpp  enclave.edl  enclave.h
enclave_samples/remote_attestation/: CMakeLists.txt
enclave_samples/remote_attestation/app/: app.cpp  app.h
enclave_samples/remote_attestation/enclave/: enclave.cpp  enclave.edl  enclave.h
enclave_service/: CMakeLists.txt
enclave_service/client/: untrusted_enclave_service_client_main.cpp
enclave_service/proto/: enclave_service.proto
enclave_service/server/: untrusted_enclave_service_server_main.cpp
enclave_service/trusted/: trusted_enclave_service.cpp
enclave_service/untrusted/: untrusted_enclave_service_client.cpp  untrusted_enclave_service_client.h  untrusted_enclave_service_server.cpp  untrusted_enclave_service_server.h
proto/: kubetee.proto
sdk/: CMakeLists.txt
sdk/common/: aes.cpp  bytes.cpp  challenger.cpp  envelope.cpp  rsa.cpp
sdk/edl/: common_utils.edl  kubetee.edl  remote_attestation.edl
sdk/include/tee/common/: aes.h  bytes.h  challenger.h  envelope.h  error.h  log.h  protobuf.h  rsa.h  scope.h  table.h  type.h
sdk/include/tee/trusted/: trusted_instance.h  trusted_pbcall.h  trusted_pbfunctions.h
sdk/include/tee/trusted/utils/: trusted_seal.h
sdk/include/tee/untrusted/: untrusted_config.h  untrusted_pbcall.h
sdk/include/tee/untrusted/enclave/: untrusted_enclave.h
sdk/include/tee/untrusted/ra/: untrusted_challenger.h  untrusted_ias.h
sdk/include/tee/untrusted/utils/: untrusted_fs.h  untrusted_json.h
sdk/trusted/: CMakeLists.txt  trusted_instance.cpp  trusted_pbcall.cpp  trusted_pbfunctions.cpp
sdk/trusted/ra/: trusted_ra.cpp
sdk/trusted/utils/: trusted_crypto.cpp  trusted_log.cpp  trusted_seal.cpp
sdk/untrusted/: CMakeLists.txt  untrusted_pbcall.cpp
sdk/untrusted/challenger/: CMakeLists.txt  untrusted_challenger.cpp  untrusted_challenger_config.h
sdk/untrusted/enclave/: untrusted_enclave.cpp
sdk/untrusted/ra/: untrusted_ias.cpp
sdk/untrusted/utils/: untrusted_fs.cpp  untrusted_json.cpp  untrusted_json_internal.h  untrusted_log.cpp
tools/: clang_format.sh  cpplint_all.sh  dockerenv.sh  dump_enclave_info.sh  gencert
